--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
     <div class="container">
         <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>
-          <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="currentUser$ | async">
-            <ng-container>
+          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <ng-container *ngIf="currentUser$ | async">
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" routerLink="/members" routerLinkActive="active">Matches</a>
               </li>
@@ -12,18 +12,15 @@
               <li class="nav-item">
                 <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>
               </li>
-              <li class="nav-item">
-                  <a class="nav-link" (click)="logout()">Logout</a>
-                </li>
             </ng-container>
           </ul>
 
-          <div class="dropdown" dropdown *ngIf="currentUser$ | async">
-              <a class="dropdown-toggle text-light" dropdownToggle>Welcome User</a>
+          <div class="dropdown" dropdown *ngIf="(currentUser$ | async) as user">
+              <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{user.username | titlecase}}</a>
               <div class="dropdown-menu mt-3" *dropdownMenu>
-                  <a class="dropdown-item" href="#">Edit Profile</a>
+                  <a class="dropdown-item" href="/">Edit Profile</a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" (click)="logout()">Logout</a>
+                  <a class="dropdown-item" (click)="logout()" href="/">Logout</a>
               </div>
           </div>
 
@@ -40,7 +37,7 @@
                 class="form-control me-2" 
                 type="password" 
                 placeholder="Password">
-            <button class="btn btn-outline-success" type="submit">Login</button>
+            <button class="btn btn-success" type="submit">Login</button>
           </form>
         </div>
   </nav>
